force-app/main/default/objects/Product2/fields/HAM_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Building_Name__c</fullName>
    <label>Building Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>120 College Hill Rd</fullName>
            </value>
            <value>
                <fullName>202 College Hill, Phil Bldg</fullName>
            </value>
            <value>
                <fullName>202 College Hill Rd</fullName>
            </value>
            <value>
                <fullName>3994 Campus Rd.</fullName>
            </value>
            <value>
                <fullName>3 College Hill Rd</fullName>
            </value>
            <value>
                <fullName>4002 Apt 1</fullName>
            </value>
            <value>
                <fullName>4002 Apt 2</fullName>
            </value>
            <value>
                <fullName>6 Stryker Lane</fullName>
            </value>
            <value>
                <fullName>95 College Hill Road</fullName>
            </value>
            <value>
                <fullName>AFRO-LATIN CULTURAL CENTER</fullName>
            </value>
            <value>
                <fullName>Alpha Delta Phi</fullName>
            </value>
            <value>
                <fullName>Alpha Theta Chi</fullName>
            </value>
            <value>
                <fullName>Alumni Gym</fullName>
            </value>
            <value>
                <fullName>Anderson-Connell Alumni Center</fullName>
            </value>
            <value>
                <fullName>Anderson Road Apartments</fullName>
            </value>
            <value>
                <fullName>Art History-Molly Root House</fullName>
            </value>
            <value>
                <fullName>Azel Backus House</fullName>
            </value>
            <value>
                <fullName>Babbitt</fullName>
            </value>
            <value>
                <fullName>Beinecke Student Activities Village</fullName>
            </value>
            <value>
                <fullName>Benedict Hall</fullName>
            </value>
            <value>
                <fullName>Bldg TBA</fullName>
            </value>
            <value>
                <fullName>Blood Dance Studio</fullName>
            </value>
            <value>
                <fullName>Blood Fitness Center</fullName>
            </value>
            <value>
                <fullName>Boathouse</fullName>
            </value>
            <value>
                <fullName>Bristol Campus Ctr</fullName>
            </value>
            <value>
                <fullName>Bristol Center</fullName>
            </value>
            <value>
                <fullName>Bristol Pool</fullName>
            </value>
            <value>
                <fullName>Bundy East</fullName>
            </value>
            <value>
                <fullName>Bundy West</fullName>
            </value>
            <value>
                <fullName>Burke Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>