force-app/main/default/objects/Product2/fields/HAM_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>HAM_Room_Number__c</fullName>
    <label>Room Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>