force-app/main/default/objects/Product2/fields/HAM_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Square_Footage__c</fullName>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>