force-app/main/default/objects/Product2/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Under Discussion</fullName>
            </value>
            <value>
                <fullName>Confirmed/No Longer Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>