force-app/main/default/objects/Product2/fields/HAM_Target_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Target_Gift_Amount__c</fullName>
    <inlineHelpText>Minimum gift amount associated with naming opp.</inlineHelpText>
    <label>Target Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>