force-app/main/default/objects/Product2/fields/HAM_Total_Number__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Number__c</fullName>
    <label>Total Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>