force-app/main/default/objects/Product2/fields/HAM_Total_Number_Remaining__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Number_Remaining__c</fullName>
    <label>Total Number Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>